--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DspbimV0</title>
+  <title>DSPBIM</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <script src="https://kit.fontawesome.com/9be7ef1b84.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
